2011-12-29  Ethan A Merritt  <merritt@u.washington.edu>

	* src/plot.c src/plot.h src/qtterminal/qt_term.cpp:
	Provide a function cancel_history() that can be called by terminal
	helper processes after forking so that the history file isn't 
	trashed on exit.
	Bug #2950711

	* docs/gnuplot.doc:  Minor updates to match 4.6 configuration.

2011-12-28  Ethan A Merritt  <merritt@u.washington.edu>

	* docs/gnuplot.doc share/Makefile.am share/colors_default.gp
	share/colors_mono.gp share/colors_podo.gp share/gnuplotrc
	src/Makefile.am:
	Provide template initialization files, including examples of customizing
	the linetype color sequence.  These are installed in $GNUPLOT_SHARE_DIR
	(usually /usr/local/share/gnuplot/4.6).

	* src/command.c src/datafile.c src/help.c src/history.c src/misc.c
	src/plot.c src/plot.h src/term.c src/variable.c:
	Do not allow execution of system(), shell, or popen() commands in the
	initialization files.

	* src/plot.c show/plot.c: More compact splash page.

	* src/graphics.c src/graphics.h src/graph3d.c:
	Strangely, the final parameter of place_objects(,,,clip_area) was
	(1) never used and (2) shadowed a global parameter that _was_ used.
	Bug #3426247

	* configure.in: Default to --enable-stats --without-bitmap-terminals

	* configure.in PATCHLEVEL: Report as version 4.6.rc1

2011-12-25  Ethan A Merritt  <merritt@u.washington.edu>

	* src/qtterminal/QtGnuplotEvent.cpp src/qtterminal/QtGnuplotScene.cpp:
	If two button release events occur in quick succession then the program
	messes up the event handling and winds up in a non-recoverable state.
	Apply an empirical fix to ignore events in a 300 msec window.
	Also rather than ending up a zombie, exit explicitly on a sync error.
	Bugfix

2011-12-21  Ethan A Merritt  <merritt@u.washington.edu>

	* src/plot2d.c:  The default sequence of histogram colors was one off
	from the default sequence of line colors.  Bugfix.

2011-12-11  Bastian Maerkisch  <bmaerkisch@web.de>
